@@ -126,6 +126,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #18383: Avoid creating duplicate filters when using filterwarnings
+  and simplefilter.  Based on patch by Alex Shkop.
+
 - Issue #27057: Fix os.set_inheritable() on Android, ioctl() is blocked by
   SELinux and fails with EACCESS. The function now falls back to fcntl().
   Patch written by Michał Bednarski.
